--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "apexcharts": "^4.7.0",
+    "formik": "^2.4.6",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.5",
+    "rsuite": "^5.82.0",
+    "sweetalert2": "^11.22.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
